try to fix dialog issues on ios

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,6 @@
 *::after {
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
-  overflow-x: visible;
 }
 
 html {
